--- a/Grafico/IngresoYGastos.form
+++ b/Grafico/IngresoYGastos.form
@@ -139,7 +139,7 @@
           </component>
         </children>
       </grid>
-      <grid id="c281c" layout-manager="GridLayoutManager" row-count="14" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c281c" layout-manager="GridLayoutManager" row-count="13" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
@@ -169,7 +169,9 @@
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <model/>
+            </properties>
           </component>
           <component id="6e3d1" class="javax.swing.JLabel">
             <constraints>
@@ -193,7 +195,7 @@
             </constraints>
             <properties>
               <model>
-                <item value="Selecciona una opción"/>
+                <item value=""/>
                 <item value="0"/>
                 <item value="1"/>
                 <item value="2"/>
@@ -250,9 +252,7 @@
               <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <model>
-                <item value="Seleccionar una opción"/>
-              </model>
+              <model/>
             </properties>
           </component>
           <component id="7069a" class="javax.swing.JComboBox" binding="cb_frecuencia_gasto">
@@ -261,7 +261,7 @@
             </constraints>
             <properties>
               <model>
-                <item value="Seleccionar una opción"/>
+                <item value=""/>
                 <item value="0"/>
                 <item value="1"/>
                 <item value="2"/>
@@ -333,7 +333,7 @@
           </component>
           <vspacer id="a5dd9">
             <constraints>
-              <grid row="13" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <component id="e571e" class="javax.swing.JTextField" binding="tf_acreedor_gast">
@@ -374,27 +374,7 @@
               </model>
             </properties>
           </component>
-          <component id="e3310" class="javax.swing.JComboBox" binding="cb_estatus">
-            <constraints>
-              <grid row="8" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <model>
-                <item value="Selecciona una opción"/>
-                <item value="Activo"/>
-                <item value="Inactivo"/>
-              </model>
-            </properties>
-          </component>
           <component id="72a9b" class="javax.swing.JTextField" binding="tf_gasto_id">
-            <constraints>
-              <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="72e80" class="javax.swing.JTextField" binding="tf_ingreso_id">
             <constraints>
               <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -402,9 +382,17 @@
             </constraints>
             <properties/>
           </component>
+          <component id="72e80" class="javax.swing.JTextField" binding="tf_ingreso_id">
+            <constraints>
+              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
           <component id="5ff24" class="javax.swing.JLabel">
             <constraints>
-              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Inserta el ID del Gasto"/>
@@ -412,7 +400,7 @@
           </component>
           <component id="a6c6" class="javax.swing.JLabel">
             <constraints>
-              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Inserta el ID del Ingreso:"/>
@@ -428,7 +416,7 @@
           </component>
           <component id="9715c" class="javax.swing.JButton" binding="btn_agregar_gast">
             <constraints>
-              <grid row="9" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Agregar Gastos"/>
@@ -437,7 +425,7 @@
           <grid id="7ff5d" binding="panel_tabla_ingr" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="12" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -465,7 +453,7 @@
           </grid>
           <component id="ced4f" class="javax.swing.JButton" binding="btn_eliminar_ing">
             <constraints>
-              <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="100" height="20"/>
               </grid>
             </constraints>
@@ -475,7 +463,7 @@
           </component>
           <component id="48452" class="javax.swing.JButton" binding="btn_eliminar_gasto">
             <constraints>
-              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="100" height="20"/>
               </grid>
             </constraints>
@@ -486,7 +474,7 @@
           <grid id="20ac5" binding="gasto_tabla_panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="12" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -516,7 +504,7 @@
           </grid>
           <vspacer id="cca28">
             <constraints>
-              <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <component id="1c4bd" class="javax.swing.JLabel">
@@ -524,7 +512,7 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="descripción"/>
+              <text value="Nombre"/>
             </properties>
           </component>
           <component id="82193" class="javax.swing.JLabel">
@@ -581,14 +569,6 @@
             </constraints>
             <properties>
               <text value="Categoria"/>
-            </properties>
-          </component>
-          <component id="edde" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="8" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Estatus"/>
             </properties>
           </component>
         </children>
