--- a/Grafico/IngresoYGastos.form
+++ b/Grafico/IngresoYGastos.form
@@ -139,7 +139,7 @@
           </component>
         </children>
       </grid>
-      <grid id="c281c" layout-manager="GridLayoutManager" row-count="13" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c281c" layout-manager="GridLayoutManager" row-count="12" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
@@ -333,7 +333,7 @@
           </component>
           <vspacer id="a5dd9">
             <constraints>
-              <grid row="12" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <component id="e571e" class="javax.swing.JTextField" binding="tf_acreedor_gast">
@@ -368,42 +368,12 @@
               <model>
                 <item value=""/>
                 <item value="Personal"/>
+                <item value="Gastos Básicos"/>
                 <item value="Regalo"/>
                 <item value="Deuda"/>
                 <item value="Suscripción"/>
+                <item value="Me lo Merezco"/>
               </model>
-            </properties>
-          </component>
-          <component id="72a9b" class="javax.swing.JTextField" binding="tf_gasto_id">
-            <constraints>
-              <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="72e80" class="javax.swing.JTextField" binding="tf_ingreso_id">
-            <constraints>
-              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="5ff24" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Inserta el ID del Gasto"/>
-            </properties>
-          </component>
-          <component id="a6c6" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Inserta el ID del Ingreso:"/>
             </properties>
           </component>
           <component id="c53e6" class="javax.swing.JButton" binding="btn_agregar_ingr">
@@ -425,7 +395,7 @@
           <grid id="7ff5d" binding="panel_tabla_ingr" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="11" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -451,30 +421,10 @@
               </scrollpane>
             </children>
           </grid>
-          <component id="ced4f" class="javax.swing.JButton" binding="btn_eliminar_ing">
-            <constraints>
-              <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="20"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Eliminar Ingreso"/>
-            </properties>
-          </component>
-          <component id="48452" class="javax.swing.JButton" binding="btn_eliminar_gasto">
-            <constraints>
-              <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="20"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Eliminar Gasto"/>
-            </properties>
-          </component>
           <grid id="20ac5" binding="gasto_tabla_panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="11" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -504,7 +454,7 @@
           </grid>
           <vspacer id="cca28">
             <constraints>
-              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <component id="1c4bd" class="javax.swing.JLabel">
