--- a/Grafico/ConsultarMovimientos.form
+++ b/Grafico/ConsultarMovimientos.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="MovPanel" layout-manager="GridLayoutManager" row-count="8" column-count="22" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1027" height="535"/>
+      <xy x="20" y="20" width="1057" height="535"/>
     </constraints>
     <properties>
       <background color="-16757148"/>
@@ -44,15 +44,6 @@
           </model>
         </properties>
       </component>
-      <grid id="8198d" binding="datePanelContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="3" column="7" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
       <component id="4cd6d" class="javax.swing.JLabel">
         <constraints>
           <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
@@ -61,16 +52,6 @@
           <font name="Segoe UI Black" size="18"/>
           <foreground color="-394241"/>
           <text value="Nombre de Cuenta:"/>
-        </properties>
-      </component>
-      <component id="2da9e" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font name="Segoe UI Black" size="18"/>
-          <foreground color="-394241"/>
-          <text value="Fecha:"/>
         </properties>
       </component>
       <component id="463de" class="javax.swing.JLabel">
@@ -95,14 +76,6 @@
           <model>
             <item value="Escoger una opción"/>
           </model>
-        </properties>
-      </component>
-      <component id="d4032" class="javax.swing.JButton" binding="btnBuscar">
-        <constraints>
-          <grid row="3" column="10" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Buscar"/>
         </properties>
       </component>
       <component id="eb565" class="javax.swing.JSeparator">
@@ -139,6 +112,14 @@
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="6bde2" class="javax.swing.JButton" binding="btnBuscar">
+        <constraints>
+          <grid row="3" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="BUSCAR"/>
+        </properties>
       </component>
     </children>
   </grid>
